# apps/api/src/auth/errors/token-expired.error.ts
@@ -1,6 +1,11 @@
 export class TokenExpiredError extends Error {
-  constructor() {
-    super("IDP token has expired");
+  constructor(
+    public readonly code:
+      | "TOKEN_NOT_FOUND"
+      | "TOKEN_EXPIRED"
+      | "TOKEN_REFRESH_FAILED" = "TOKEN_EXPIRED",
+  ) {
+    super(code);
     this.name = "TokenExpiredError";
   }
 }
